--- a/style.css
+++ b/style.css
@@ -1,32 +1,168 @@
-h1 {
-    font-family: 'Bai Jamjuree', sans-serif;
-    font-weight: 600;
-    font-size: 24px;
-    color: hsl(210, 10%, 33%);
-    text-align: center;
-}
-
-h2 {
-    font-family: 'Bai Jamjuree', sans-serif;
-    font-weight: 600;
-    font-size: 21px;
-    color: hsl(210, 10%, 33%);
-    text-align: center;
-}
-
-p {
-    font-family: 'Bai Jamjuree', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    color: hsl(201, 11%, 66%);
-}
-
-@media (max-width: 768px) {
-    .container {
-        display: flex;
-        flex-direction: column;
+    .green-logo-1 {
+        width: 125px;
+        align-self: center;
     }
-    p {
+    
+    .history h1 {
+        font-size: 30px;
+    }
+    /* Spacing Utilities */
+    /* .mb-1 { margin-bottom: 10px; }
+    .mb-2 { margin-bottom: 15px; }
+    .mb-3 { margin-bottom: 20px; }
+    .mb-4 { margin-bottom: 25px; } */
+    /* Base Typography */
+    
+    h1 {
+        font-family: 'Bai Jamjuree', sans-serif;
+        font-weight: 600;
+        font-size: 28px;
+        color: hsl(210, 10%, 33%);
         text-align: center;
+        margin-bottom: -5px;
     }
-}
+    
+    h2 {
+        font-family: 'Bai Jamjuree', sans-serif;
+        font-weight: 600;
+        font-size: 23px;
+        color: hsl(210, 10%, 33%);
+    }
+    
+    p {
+        font-family: 'Bai Jamjuree', sans-serif;
+        font-weight: 200;
+        font-size: 16px;
+        line-height: 1.7;
+        color: hsl(201, 11%, 66%);
+    }
+    
+    button {
+        border-radius: 35px;
+        width: 310px;
+        height: 55px;
+        color: white;
+        font-family: 'Bai Jamjuree', sans-serif;
+        font-weight: 400;
+        font-size: 18px;
+    }
+    
+    .i0S {
+        background-color: hsl(171, 66%, 44%);
+        border-color: hsl(171, 66%, 44%);
+    }
+    
+    .mac {
+        background-color: hsl(233, 100%, 69%);
+        border-color: hsl(233, 100%, 69%);
+    }
+    
+    footer {
+        background-color: #f5f6f8;
+    }
+    
+    footer p {
+        color: hsl(210, 10%, 33%);
+        font-size: 18px;
+    }
+    
+    @media (max-width: 768px) {
+        body {
+            /* margin-left: 30px;
+            margin-right: 30px;
+            margin-top: 120px; */
+            background-image: url(images/bg-header-mobile.png);
+            background-repeat: no-repeat;
+            margin: 0;
+        }
+        .green-logo-1 {
+            margin-bottom: 40px;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            margin-right: 30px;
+            margin-left: 30px;
+            margin-top: 120px;
+        }
+        p {
+            text-align: center;
+        }
+        .button-row {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 50px;
+            margin-bottom: 160px;
+        }
+        .keep-track {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .keep-track h2 {
+            margin-top: 20px;
+            margin-bottom: -5px;
+        }
+        .access {
+            margin-top: 160px;
+        }
+        .computer {
+            width: calc(100vw - 60px);
+            justify-content: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+        .supercharge {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .supercharge p {
+            margin-bottom: 45px;
+        }
+        .supercharge img {
+            margin-top: 25px;
+            margin-bottom: 25px;
+        }
+        .logos {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 60px;
+            margin-top: 100px;
+            margin-bottom: 130px;
+        }
+        .logos img {
+            max-width: 125px;
+        }
+        .download h1 {
+            font-size: 28px;
+        }
+        footer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        footer img {
+            width: 55px;
+            margin-top: 40px;
+            margin-bottom: 30px;
+        }
+        footer p {
+            line-height: 0.8;
+        }
+        .social-icons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 40px;
+            /* margin-top: 50px; */
+            margin-bottom: 50px;
+            width: 25px;
+        }
+    }
