--- a/style.css
+++ b/style.css
@@ -1,168 +1,357 @@
-    .green-logo-1 {
-        width: 125px;
-        align-self: center;
-    }
-    
-    .history h1 {
-        font-size: 30px;
-    }
-    /* Spacing Utilities */
-    /* .mb-1 { margin-bottom: 10px; }
+body {
+    margin: 0;
+    background-image: url(images/bg-header-desktop.png);
+    background-repeat: no-repeat;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.green-logo-1 {
+    width: 125px;
+    align-self: center;
+    margin-top: 120px;
+}
+
+.button-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 160px;
+}
+
+.history {
+    /* width: 700px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.history h1 {
+    font-size: 40px;
+}
+
+.supercharge {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/* Spacing Utilities */
+
+
+/* .mb-1 { margin-bottom: 10px; }
     .mb-2 { margin-bottom: 15px; }
     .mb-3 { margin-bottom: 20px; }
     .mb-4 { margin-bottom: 25px; } */
-    /* Base Typography */
-    
-    h1 {
-        font-family: 'Bai Jamjuree', sans-serif;
-        font-weight: 600;
-        font-size: 28px;
-        color: hsl(210, 10%, 33%);
+
+
+/* Base Typography */
+
+h1 {
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: hsl(210, 10%, 33%);
+    text-align: center;
+    margin-bottom: -5px;
+}
+
+h2 {
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: 600;
+    font-size: 23px;
+    color: hsl(210, 10%, 33%);
+}
+
+p {
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 1.7;
+    color: hsl(201, 11%, 66%);
+    text-align: center;
+}
+
+button {
+    border-radius: 35px;
+    width: 225px;
+    height: 55px;
+    color: white;
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.i0S {
+    background-color: hsl(171, 66%, 44%);
+    border-color: hsl(171, 66%, 44%);
+    box-shadow: 5px 7px 5px 2px #def8ef;
+}
+
+.mac {
+    background-color: hsl(233, 100%, 69%);
+    border-color: hsl(233, 100%, 69%);
+    box-shadow: 5px 7px 5px 2px #f1f0f5;
+}
+
+footer {
+    background-color: #f5f6f8;
+}
+
+footer p {
+    color: hsl(210, 10%, 33%);
+    font-size: 18px;
+}
+
+@media (min-width: 768px) {
+    .history p {
+        max-width: 700px;
+        margin-right: 350px;
+        margin-left: 350px;
+    }
+    .keep-track span {
+        margin-top: 80px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 600px;
+        gap: 100px;
+    }
+    .keep-track>p {
+        max-width: 700px;
+        margin-right: 350px;
+        margin-left: 350px;
+    }
+    .keep-track img {
+        justify-self: start;
+        max-width: 700px;
+    }
+    .keep-track .keep-track-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        max-width: 350px;
+    }
+    .keep-track .keep-track-text p {
+        text-align: left;
+    }
+    .access span {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .access p {
+        max-width: 700px;
+        margin-right: 350px;
+        margin-left: 350px;
+    }
+    .supercharge p {
+        margin-bottom: 75px;
+        max-width: 700px;
+    }
+    .greyscale {
+        display: grid;
+        grid-template-columns: 340px 340px 340px;
+        grid-template-rows: 240px;
+        gap: 30px;
+        margin-bottom: 150px;
+    }
+    .blacklists,
+    .plain,
+    .sneak {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: baseline;
+    }
+    .plain img {
+        margin-bottom: 8px;
+    }
+    .sneak img {
+        margin-bottom: 8px;
+    }
+    .download p {
+        max-width: 700px;
+        margin-right: 350px;
+        margin-left: 350px;
+    }
+    .logos {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 150px;
+    }
+    footer {
+        display: grid;
+        grid-template-columns: 350px 600px 350px;
+    }
+    footer .green-logo-2 {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        justify-self: center;
+        width: 55px;
+        height: 55px;
+    }
+    footer p {
+        line-height: 1;
+    }
+    .footer-links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 10px;
+        width: 475px;
+        height: 90px;
+        column-gap: 90px;
+        align-content: flex-start;
+        justify-content: flex-start;
+        align-items: baseline;
+    }
+    .social-icons {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-right: 80px;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    nav {
+        line-height: 1;
+        grid-column: 3;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        background-image: url(images/bg-header-mobile.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        margin: 0;
+    }
+    .green-logo-1 {
+        margin-bottom: 40px;
+    }
+    .container {
+        margin-right: 30px;
+        margin-left: 30px;
+        margin-top: 120px;
+    }
+    .history h1 {
+        font-size: 30px;
+    }
+    p {
         text-align: center;
+        font-size: 16px;
+    }
+    .button-row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 50px;
+        margin-bottom: 160px;
+    }
+    button {
+        width: 310px;
+    }
+    .keep-track {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .keep-track h2 {
+        text-align: center;
+        margin-top: 20px;
         margin-bottom: -5px;
     }
-    
-    h2 {
-        font-family: 'Bai Jamjuree', sans-serif;
-        font-weight: 600;
-        font-size: 23px;
-        color: hsl(210, 10%, 33%);
+    .keep-track .keep-track-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
-    
-    p {
-        font-family: 'Bai Jamjuree', sans-serif;
-        font-weight: 200;
-        font-size: 16px;
-        line-height: 1.7;
-        color: hsl(201, 11%, 66%);
+    .keep-track .keep-track-text p {
+        text-align: center;
     }
-    
-    button {
-        border-radius: 35px;
-        width: 310px;
-        height: 55px;
-        color: white;
-        font-family: 'Bai Jamjuree', sans-serif;
-        font-weight: 400;
-        font-size: 18px;
+    .access {
+        margin-top: 160px;
     }
-    
-    .i0S {
-        background-color: hsl(171, 66%, 44%);
-        border-color: hsl(171, 66%, 44%);
+    .computer {
+        width: calc(100vw - 60px);
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
-    
-    .mac {
-        background-color: hsl(233, 100%, 69%);
-        border-color: hsl(233, 100%, 69%);
+    .computer-phone {
+        width: calc(100vw - 60px);
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
-    
+    .supercharge {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .supercharge p {
+        margin-bottom: 45px;
+    }
+    .supercharge img {
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+    .blacklists,
+    .plain,
+    .sneak {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .logos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 60px;
+        margin-top: 100px;
+        margin-bottom: 130px;
+    }
+    .logos img {
+        max-width: 125px;
+    }
+    .download h1 {
+        font-size: 28px;
+    }
     footer {
-        background-color: #f5f6f8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-    
+    footer img {
+        width: 55px;
+        margin-top: 40px;
+        margin-bottom: 30px;
+    }
     footer p {
-        color: hsl(210, 10%, 33%);
-        font-size: 18px;
+        line-height: 1;
     }
-    
-    @media (max-width: 768px) {
-        body {
-            /* margin-left: 30px;
-            margin-right: 30px;
-            margin-top: 120px; */
-            background-image: url(images/bg-header-mobile.png);
-            background-repeat: no-repeat;
-            margin: 0;
-        }
-        .green-logo-1 {
-            margin-bottom: 40px;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            margin-right: 30px;
-            margin-left: 30px;
-            margin-top: 120px;
-        }
-        p {
-            text-align: center;
-        }
-        .button-row {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 50px;
-            margin-bottom: 160px;
-        }
-        .keep-track {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-        .keep-track h2 {
-            margin-top: 20px;
-            margin-bottom: -5px;
-        }
-        .access {
-            margin-top: 160px;
-        }
-        .computer {
-            width: calc(100vw - 60px);
-            justify-content: center;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
-        .supercharge {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .supercharge p {
-            margin-bottom: 45px;
-        }
-        .supercharge img {
-            margin-top: 25px;
-            margin-bottom: 25px;
-        }
-        .logos {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 60px;
-            margin-top: 100px;
-            margin-bottom: 130px;
-        }
-        .logos img {
-            max-width: 125px;
-        }
-        .download h1 {
-            font-size: 28px;
-        }
-        footer {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        footer img {
-            width: 55px;
-            margin-top: 40px;
-            margin-bottom: 30px;
-        }
-        footer p {
-            line-height: 0.8;
-        }
-        .social-icons {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            gap: 40px;
-            /* margin-top: 50px; */
-            margin-bottom: 50px;
-            width: 25px;
-        }
+    .social-icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 40px;
+        margin-bottom: 50px;
+        width: 25px;
     }
+}
