--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
-    margin: 0;
     background-image: url(images/bg-header-desktop.png);
     background-repeat: no-repeat;
-    margin: 0;
+    background-size: contain;
 }
 
 .container {
@@ -96,10 +95,26 @@ button {
     box-shadow: 5px 7px 5px 2px #def8ef;
 }
 
+.i0S:active {
+    background-color: #5acebb;
+}
+
+.i0S:hover {
+    background-color: #5acebb;
+}
+
 .mac {
     background-color: hsl(233, 100%, 69%);
     border-color: hsl(233, 100%, 69%);
     box-shadow: 5px 7px 5px 2px #f1f0f5;
+}
+
+.mac:active {
+    background-color: #8896ff;
+}
+
+.mac:hover {
+    background-color: #8896ff;
 }
 
 footer {
@@ -111,7 +126,19 @@ footer p {
     font-size: 18px;
 }
 
-@media (min-width: 768px) {
+.footer-links p:active {
+    color: #46a994;
+}
+
+.footer-links p:hover {
+    color: #46a994;
+}
+
+.twitter:hover {
+    filter: #46a994;
+}
+
+@media (min-width: 1000px) {
     .history p {
         max-width: 700px;
         margin-right: 350px;
@@ -230,7 +257,7 @@ footer p {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     body {
         background-image: url(images/bg-header-mobile.png);
         background-repeat: no-repeat;
